Bug #2333 ALTER DATABASE on inexistent database hangs the client
Submitted: 9 Jan 2004 6:43 Modified: 12 Jan 2004 12:07
Reporter: Guilhem Bichot Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.1 OS:Any (all)
Assigned to: Guilhem Bichot Target Version:

[9 Jan 2004 6:43] Guilhem Bichot
Description:
See how-to-repeat

How to repeat:
[guilhem@gbichot2 client]$ mysql1 test
Reading table information for completion of table and column names
You can turn off this feature to get a quicker startup with -A

Welcome to the MySQL monitor.  Commands end with ; or \g.
Your MySQL connection id is 2 to server version: 4.1.2-alpha-debug-log

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

MASTER> alter database lkjmk;

and it hangs there forever.

Suggested fix:
will send a patch for approval now.
[12 Jan 2004 12:07] Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

ChangeSet@1.1683.1.1, 2004-01-12 21:05:41+01:00, guilhem@gbichot2