Fix for BUG#2333 "ALTER DATABASE on inexistent database hangs the client": mysql_alter_db() now returns -1 in case of error, so that mysql_execute_command() calls send_error().